--- a/demo-app/manifests/deployment.yaml
+++ b/demo-app/manifests/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: demo-app
-          image: changeme.azurecr.io/demo-app
+          image: eliteclusterdemoapp08atb.azurecr.io/elitedemocluster-simpleapp:v1
           ports:
           - containerPort: 3000
